Update and fix mapping Update DTO Fix repositories Fix Typesense error connection Update services and controllers